# wx-cmake-clang-template

./: .clang_complete  .clangd  .gitignore  CMakeLists.txt  README.md
src/: main.cpp
